--- a/index.html
+++ b/index.html
@@ -15,18 +15,10 @@
 
 <body>
   <div id="wrap">
-    <header id="header" class="d-flex justify-content-center py-3 bg-success" style="display: none !important;">
-      <ul class="nav nav-pills">
-        <li class="nav-item "><a href="index.html" class="nav-link text-white" aria-current="page">홈으로</a></li>
-        <li class="nav-item"><a href="sub_heechan.html" class="nav-link text-white">김희찬</a></li>
-        <li class="nav-item"><a href="sub_injun.html" class="nav-link text-white">여인준</a></li>
-        <li class="nav-item"><a href="sub_dawon.html" class="nav-link text-white">이다원</a></li>
-        <li class="nav-item"><a href="sub_youngho.html" class="nav-link text-white">진영호</a></li>
-      </ul>
-    </header>
+
     <section id="main">
       <div class="main_box">
-        <p class="main_img"><img src="images/Union.png">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Union_2.png"></p>
+        <p class="main_img"><img src="images/Union.png"><img src="images/Union_2.png"></p>
         <h1>새싹의 반란</h1>
       </div>
 
@@ -54,7 +46,7 @@
 
         <div class="team_promiss_txt">
           <h2>우리<span class="team">'팀'</span>의 약속은요!</h2>
-          <div class="promiss-area" style="background-color: skyblue;">
+          <div class="promiss-area">
             <div class="left-width"></div>
             <div class="left-length"></div>
             <div class="right-width"></div>
@@ -68,24 +60,11 @@
     </section>
     <section id="team_member">
       <div class="container marketing">
-        <!--<div class="row featurette">
-              <div class="col-md-7 align-self-center">
-                  <div class="team_member_box_right">
-                      <h2 class="my_title">"미래의 떳떳한 개발자가 될"</h2>
-                      <p class="my_name">김희찬이에요</p>
-                      <button class="mybutton">프로필 자세히 보기</button>
-                  </div>
-
-              </div>
-              <div class="col-md-5 my_content">
-                  <img src="images/image_1.png" class="my_image">
-              </div>
-          </div> -->
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2 align-self-center my_content">
             <div class="team_member_box">
-              <h2 class="my_title">"미래의 떳떳한 개발자가 될"</h2>
+              <h2 class="my_title">"미래의 월 천만원 개발자가 될"</h2>
               <p class="my_name">김희찬이에요</p>
               <button class="mybutton"><a href="sub_heechan.html">프로필 자세히 보기</a></button>
             </div>
@@ -98,7 +77,7 @@
         <div class="row featurette">
           <div class="col-md-7 align-self-center my_content">
             <div class="team_member_box_right">
-              <h2 class="my_title">"미래의 떳떳한 개발자가 될"</h2>
+              <h2 class="my_title">"미래의 행복한 개발자가 될"</h2>
               <p class="my_name">여인준이에요</p>
               <button class="mybutton"><a href="sub_injun.html">프로필 자세히 보기</a></button>
             </div>
@@ -111,7 +90,7 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2 align-self-center my_content">
             <div class="team_member_box">
-              <h2 class="my_title">"미래의 떳떳한 개발자가 될"</h2>
+              <h2 class="my_title">"미래의 빛나는 개발자가 될"</h2>
               <p class="my_name">이다원이에요</p>
               <button class="mybutton"><a href="sub_dawon.html">프로필 자세히 보기</a></button>
             </div>
@@ -125,7 +104,7 @@
         <div class="row featurette">
           <div class="col-md-7 align-self-center">
             <div class="team_member_box_right">
-              <h2 class="my_title">"미래의 떳떳한 개발자가 될"</h2>
+              <h2 class="my_title">"미래의 당당한 개발자가 될"</h2>
               <p class="my_name">진영호이에요</p>
               <button class="mybutton"><a href="sub_youngho.html">프로필 자세히 보기</a></button>
             </div>
@@ -203,24 +182,20 @@
           $('#btn_top').fadeOut();
         }
       })//window scroll
-      function 현재스크롤() {
-        window.addEventListener('scroll', function () {
-          console.log(window.scrollY)
-        })
-      }
+ 
 
-      $(window).scroll(function () { 
+      $(window).scroll(function () {
         var scrollAll = document.querySelector('html').scrollTop;
-        var clientAll =  document.querySelector('html').clientHeight
+        var clientAll = document.querySelector('html').clientHeight
         var scrollH = document.querySelector('html').scrollHeight
-        
-        if (scrollAll + clientAll  >= scrollH - 464) {
+
+        if (scrollAll + clientAll >= scrollH - 464) {
           $('#btn_top2').fadeIn();
         }
         else {
           $('#btn_top2').fadeOut();
         }
-        
+
 
       })
 
