--- a/sub_injun.html
+++ b/sub_injun.html
@@ -75,8 +75,7 @@
 
             </div>
         </div>
-        <p class="point_txt">뭐 저의 장점은 이렇게 돼서 이러한 삶을 살아가고 있다가 코딩에 눈을 떠서 캠프를</p>
-        <p class="point_txt">시작하고 이러한 장점이 캠프에 도움이 되고 좋은 개발자가 되고 싶어요</p>
+        <p class="point_txt">소통이 원할하고 프로젝트를 멋지게 해내는 개발자가 되고 싶어요!</p>
     </section>
 
 
